2016-03-18  Yusuke Suzuki  <utatane.tea@gmail.com>

        Unreviewed, missing SET_AND_EXPOSE_TO_BUILD for USE_UDIS86 in JSCOnly port
        https://bugs.webkit.org/show_bug.cgi?id=155628

        * Source/cmake/OptionsJSCOnly.cmake:

2016-03-17  Yusuke Suzuki  <utatane.tea@gmail.com>

        [JSCOnly] Enable udis86
        https://bugs.webkit.org/show_bug.cgi?id=155628

        Reviewed by Carlos Garcia Campos.

        Enable udis86 for disassembler. The current flag name is incorrect.

        * Source/cmake/OptionsJSCOnly.cmake:

2016-03-14  Konstantin Tokarev  <annulen@yandex.ru>

        Restored ENABLE_WEBCORE option and used it in JSCOnly port.
        https://bugs.webkit.org/show_bug.cgi?id=155428

        Reviewed by Michael Catanzaro.

        This is a partial revert of r182624.

        * CMakeLists.txt:
        * Source/CMakeLists.txt:
        * Source/cmake/OptionsJSCOnly.cmake:
        * Source/cmake/WebKitFS.cmake:

2016-03-13  Joseph Pecoraro  <pecoraro@apple.com>

        Remove ENABLE(ES6_TEMPLATE_LITERAL_SYNTAX) guards
        https://bugs.webkit.org/show_bug.cgi?id=155417

        Reviewed by Yusuke Suzuki.

        * Source/cmake/OptionsWin.cmake:
        * Source/cmake/WebKitFeatures.cmake:
        * Source/cmake/tools/vsprops/FeatureDefines.props:
        * Source/cmake/tools/vsprops/FeatureDefinesCairo.props:

2016-03-13  Konstantin Tokarev  <annulen@yandex.ru>

        Added new port JSCOnly.
        https://bugs.webkit.org/show_bug.cgi?id=154512

        Reviewed by Michael Catanzaro.

        This port allows to build JavaScriptCore engine with minimal
        dependencies.

        * CMakeLists.txt:
        * Source/cmake/OptionsJSCOnly.cmake: Added.

2016-03-12  Myles C. Maxfield  <mmaxfield@apple.com>

        Delete dead SVG Font code
        https://bugs.webkit.org/show_bug.cgi?id=154718

        Reviewed by Antti Koivisto.

        * Source/cmake/OptionsEfl.cmake:
        * Source/cmake/OptionsWin.cmake: