@@ -1,3 +1,14 @@
+2016-04-13  Konstantin Tokarev  <annulen@yandex.ru>
+
+        FindWebP should not be misguided by pkg-config when cross-compiling.
+        https://bugs.webkit.org/show_bug.cgi?id=156544
+
+        Reviewed by Michael Catanzaro.
+
+        We should use pkg-config output only as a hint, like other modules do.
+
+        * Source/cmake/FindWebP.cmake:
+
 2016-03-18  Yusuke Suzuki  <utatane.tea@gmail.com>
 
         Unreviewed, missing SET_AND_EXPOSE_TO_BUILD for USE_UDIS86 in JSCOnly port
